[package]
name = "codebreaker-solver"
version = "0.1.0"
edition = "2021"
description = "A solver for codebreaker aka. bulls and cows. Generates guesses which will guess the code in at most 5 tries."
license = "MIT"

[dependencies]
anyhow = "1.0.95"
rand = "0.8.5"
rayon = "1.10.0"
thiserror = "2.0.10"

[profile.release]
# Panics should only be caused by logic errors and are considered bugs
panic = 'abort'
# Link time Optimization
lto = true